examples/test/testpolicy18656.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18656
  namespace: namespace220
spec:
  podSelector:
    matchLabels:
      key27: value46
      key13: value26
      key35: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value41
          key26: value21
          key25: value26
      podSelector:
        matchLabels:
          key34: value9
          key15: value39
